# DCSBoards

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  config.toml  pronunciation.toml  query_aliases.toml
.github/workflows/: ci.yml  release.yml
models/: README.md
models/piper/: README.md
pages-sample/: 000-WEAPONS-A-G-AGM-65-MAVERICK-PT1.json  001-WEAPONS-A-G-AGM-65-MAVERICK-PT2.json  002-WEAPONS-A-G-AGM-88-HARM.json  003-AGM-88C-HARM-THREAT-TABLES.json  004-WEAPONS-A-G-GBU-38-31-JDAM-GBU-10-12.json  005-WEAPONS-A-G-AGM-154A-JSOW.json  006-WEAPONS-A-G-MK-82-84-UNGUIDED-BOMBS-PT1.json  007-WEAPONS-A-G-CLUSTER-MUNITIONS.json  008-WEAPONS-A-G-ROCKETS-GUN-JETTISON.json  009-WEAPONS-A-A-AIM-9-SIDEWINDER-M61A1-GUN.json  010-WEAPONS-A-A-AIM-120C-AMRAAM.json  011-SPARE.json  012-COLD-START-PT1.json  013-FENCE-CHECKS.json  014-AIR-TO-AIR-REFUELING.json  015-NAVIGATION-SETUP.json  016-A-A-RADAR-MODES.json  017-COUNTERMEASURES-CMS-PROGRAMMING.json  018-DATALINK-DATA-SHARING-PT1.json  019-DATALINK-DATA-SHARING-PT2.json  020-EMERGENCY-PROCEDURES-PT1.json  021-EMERGENCY-PROCEDURES-PT2.json  022-BVR-ENGAGEMENT-FLOW.json  023-LANDING-APPROACH.json  024-TGP-SETUP-A-G-OPERATIONS.json  025-TGP-LST-AIR-TO-AIR.json
scripts/: capture-all-states.ps1  capture-screenshot.ps1  cleanup-piper-shims.ps1  install-piper.ps1  install-whisper-model.ps1  package-portable.ps1
src/: actions.rs  config.rs  controller.rs  main.rs  overlay.rs  query_aliases.rs  settings.rs  tabs.rs  tts.rs  voice_router.rs  watcher.rs
src/audio/: capture.rs  mod.rs
src/input/: gamepad.rs  mod.rs
src/stt/: mod.rs  whisper.rs
src/tts/: mod.rs  noop.rs  piper.rs  winrt.rs
src/vr/: detect.rs  mod.rs  render.rs  session.rs
