[package]
name = "dcs-kneeboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
slint = { version = "1.13", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Core",
    "Media_Playback",
    "Media_SpeechSynthesis",
    "Storage_Streams",
] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
