[package]
name = "dcs-kneeboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[features]
default = []
# Enable whisper.cpp-based STT. Requires LLVM installed on the build host.
whisper-stt = ["dep:whisper-rs"]
# Enable VR overlay support (issue #30). When on, init_vr at startup
# probes for SteamVR + an HMD; if both present, the kneeboard is
# composited into the VR view as a world-locked overlay rather than
# a desktop window. Off by default — desktop-only build keeps shipping.
vr = ["dep:openvr", "dep:image"]

[dependencies]
slint = { version = "1.13", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
bitflags = { version = "2", features = ["serde"] }
gilrs = "0.10"
# Raw HID enumeration: gilrs reports DirectInput devices as "HID-compliant Game
# Controller" (Windows class name) rather than the device's USB product string.
# We query the product string directly via hidapi so bindings can show the
# real device name (e.g. "F16 ICP").
hidapi = "2"
notify = "6"
notify-debouncer-mini = "0.4"
cpal = "0.15"
rubato = "0.16"
# Jaro-Winkler fuzzy matching for voice query → section header resolution.
# Tiny dep (MIT), no transitive cost.
strsim = "0.11"
# Whisper STT is gated behind a feature flag because whisper-rs-sys uses
# bindgen, which needs libclang on the build host. Install LLVM first:
#   winget install LLVM.LLVM
# then build with `cargo run --features whisper-stt`. See models/README.md
# for the ggml-base.en.bin download.
whisper-rs = { version = "0.16", optional = true }
# OpenVR overlay support (issue #30). High-level Rust binding over
# openvr_sys. Loads openvr_api.dll at runtime; the SteamVR install
# provides it. We don't ship one — VR mode is opt-in and assumes the
# user has SteamVR.
openvr = { version = "0.9", optional = true }
# PNG decode + pixel manipulation for the VR render path (#30 phase 2).
# Already pulled in transitively by slint; we depend explicitly so the
# version doesn't shift under us.
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Core",
    "Media_Playback",
    "Media_SpeechSynthesis",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
